versioned_docs/version-4.0.1/plugin/tpis.mdx
---
title: TIS插件包列表
linktitle: TIS插件包列表
date: 2022-09-11
type: book
sidebar_position: 2
---

import TOCInline from '@theme/TOCInline';

<TOCInline toc={toc} />


##  tis-asyncmsg-rocketmq-plugin.tpi

* **下载地址：** http://mirror.qlangtech.com/4.0.1/tis-plugin/tis-asyncmsg-rocketmq-plugin.tpi

* **介绍：** 

	对RocketMQ进行进行封装，对接各种实时流消息（例如，MySQL binlog）执行流计算，可在TIS中构建实时同步的物化视图
* **扩展列表：** 

	* [com.qlangtech.tis.async.message.client.consumer.impl.MQListenerFactory](./plugins#comqlangtechtisasyncmessageclientconsumerimplmqlistenerfactory)

		 * [com.qlangtech.async.message.client.consumer.RocketMQListenerFactory](./plugins#comqlangtechasyncmessageclientconsumerrocketmqlistenerfactory)

	* [com.qlangtech.tis.async.message.client.consumer.impl.AbstractAsyncMsgDeserialize](./plugins#comqlangtechtisasyncmessageclientconsumerimplabstractasyncmsgdeserialize)

		 * [com.qlangtech.async.message.client.to.impl.DefaultJSONFormatDeserialize](./plugins#comqlangtechasyncmessageclienttoimpldefaultjsonformatdeserialize)

## tis-chunjun-base-plugin.tpi

* **下载地址：** http://mirror.qlangtech.com/4.0.1/tis-plugin/tis-chunjun-base-plugin.tpi

* **扩展列表：** 

	* [com.qlangtech.tis.plugin.datax.SelectedTabExtend](./plugins#comqlangtechtisplugindataxselectedtabextend)

		 * [com.qlangtech.tis.plugins.incr.flink.chunjun.sink.SinkTabPropsExtends](./plugins#comqlangtechtispluginsincrflinkchunjunsinksinktabpropsextends)

		 * [com.qlangtech.tis.plugins.incr.flink.chunjun.sink.UniqueKeySetter](./plugins#comqlangtechtispluginsincrflinkchunjunsinkuniquekeysetter)

		 * [com.qlangtech.tis.plugins.incr.flink.chunjun.source.SelectedTabPropsExtends](./plugins#comqlangtechtispluginsincrflinkchunjunsourceselectedtabpropsextends)

	* [com.qlangtech.tis.plugins.incr.flink.chunjun.offset.StartLocation](./plugins#comqlangtechtispluginsincrflinkchunjunoffsetstartlocation)

		 * [com.qlangtech.tis.plugins.incr.flink.chunjun.offset.DesignatedLocation](./plugins#comqlangtechtispluginsincrflinkchunjunoffsetdesignatedlocation)

		 * [com.qlangtech.tis.plugins.incr.flink.chunjun.offset.LatestLocation](./plugins#comqlangtechtispluginsincrflinkchunjunoffsetlatestlocation)

		 * [com.qlangtech.tis.plugins.incr.flink.chunjun.offset.ScanAll](./plugins#comqlangtechtispluginsincrflinkchunjunoffsetscanall)

	* [com.qlangtech.tis.plugins.incr.flink.connector.UpdateMode](./plugins#comqlangtechtispluginsincrflinkconnectorupdatemode)

		 * [com.qlangtech.tis.plugins.incr.flink.connector.impl.InsertType](./plugins#comqlangtechtispluginsincrflinkconnectorimplinserttype)

		 * [com.qlangtech.tis.plugins.incr.flink.connector.impl.ReplaceType](./plugins#comqlangtechtispluginsincrflinkconnectorimplreplacetype)

		 * [com.qlangtech.tis.plugins.incr.flink.connector.impl.UpdateType](./plugins#comqlangtechtispluginsincrflinkconnectorimplupdatetype)

		 * [com.qlangtech.tis.plugins.incr.flink.connector.impl.UpsertType](./plugins#comqlangtechtispluginsincrflinkconnectorimplupserttype)

	* [com.qlangtech.tis.plugins.incr.flink.chunjun.poll.Polling](./plugins#comqlangtechtispluginsincrflinkchunjunpollpolling)

		 * [com.qlangtech.tis.plugins.incr.flink.chunjun.poll.RunInterval](./plugins#comqlangtechtispluginsincrflinkchunjunpollruninterval)

	* [com.qlangtech.tis.plugins.incr.flink.chunjun.script.ChunjunStreamScriptType](./plugins#comqlangtechtispluginsincrflinkchunjunscriptchunjunstreamscripttype)

		 * [com.qlangtech.tis.plugins.incr.flink.chunjun.script.ChunjunSqlType](./plugins#comqlangtechtispluginsincrflinkchunjunscriptchunjunsqltype)

		 * [com.qlangtech.tis.plugins.incr.flink.chunjun.script.StreamApiScript](./plugins#comqlangtechtispluginsincrflinkchunjunscriptstreamapiscript)

## tis-datax-cassandra-plugin.tpi

* **下载地址：** http://mirror.qlangtech.com/4.0.1/tis-plugin/tis-datax-cassandra-plugin.tpi

* **介绍：** 

	
	* 对Cassandra NoSql数据源进行封装,使TIS能以**Cassandra**作为数据源的表。
	* 支持以**Cassandra**作为目标源的DataX Reader和Writer
* **扩展列表：** 

	* [com.qlangtech.tis.datax.impl.DataxReader](./plugins#comqlangtechtisdataximpldataxreader)

		 * [com.qlangtech.tis.plugin.datax.DataXCassandraReader](./plugins#comqlangtechtisplugindataxdataxcassandrareader)

	* [com.qlangtech.tis.datax.impl.DataxWriter](./plugins#comqlangtechtisdataximpldataxwriter)

		 * [com.qlangtech.tis.plugin.datax.DataXCassandraWriter](./plugins#comqlangtechtisplugindataxdataxcassandrawriter)

	* [com.qlangtech.tis.plugin.ds.DataSourceFactory](./plugins#comqlangtechtisplugindsdatasourcefactory)

		 * [com.qlangtech.tis.plugin.ds.cassandra.CassandraDatasourceFactory](./plugins#comqlangtechtisplugindscassandracassandradatasourcefactory)

## tis-datax-clickhouse-plugin.tpi

* **下载地址：** http://mirror.qlangtech.com/4.0.1/tis-plugin/tis-datax-clickhouse-plugin.tpi

* **介绍：** 

	* 实现Clickhouse数据源
	    
	  支持定义Clickhouse的数据源，为定义`ClickhouseWriter`插件提供支持
	  
	* 支持Clickhouse类型的 DataX Writer插件
	  
	  1. ClickhouseWriter 插件实现了写入数据到 Clickhouse库的目的表的功能。
	  
	  2. ClickhouseWriter 面向ETL开发工程师，他们使用 ClickhouseWriter 从数仓导入数据到 Clickhouse。同时 ClickhouseWriter 亦可以作为数据迁移工具为DBA等用户提供服务
* **扩展列表：** 

	* [com.qlangtech.tis.datax.impl.DataxWriter](./plugins#comqlangtechtisdataximpldataxwriter)

		 * [com.qlangtech.tis.plugin.datax.DataXClickhouseWriter](./plugins#comqlangtechtisplugindataxdataxclickhousewriter)

	* [com.qlangtech.tis.plugin.ds.DataSourceFactory](./plugins#comqlangtechtisplugindsdatasourcefactory)

		 * [com.qlangtech.tis.plugin.ds.clickhouse.ClickHouseDataSourceFactory](./plugins#comqlangtechtisplugindsclickhouseclickhousedatasourcefactory)

## tis-datax-common-plugin.tpi

* **下载地址：** http://mirror.qlangtech.com/4.0.1/tis-plugin/tis-datax-common-plugin.tpi

* **介绍：** 

	* 定义DataxProcessor实现录入DataX实例基本信息的功能
	
	* 为其他DataX Reader、Writer插件提供了公共类
	
	* 定义DataXGlobalConfig，提供DataX配置的基础配置参数，如：channel,errorLimitCount 等
	
	* 提供了DataX 任务提交方式的实现
	  
	  1. `LocalDataXJobSubmit`本地任务提交
	  2. `DistributedOverseerDataXJobSubmit`基于K8S的分布式任务提交方式（生产环境中建议使用该种提交方式）
* **扩展列表：** 

	* [com.qlangtech.tis.plugin.AuthToken](./plugins#comqlangtechtispluginauthtoken)

		 * [com.qlangtech.tis.plugin.aliyun.AccessKey](./plugins#comqlangtechtispluginaliyunaccesskey)

		 * [com.qlangtech.tis.plugin.aliyun.NoneToken](./plugins#comqlangtechtispluginaliyunnonetoken)

		 * [com.qlangtech.tis.plugin.aliyun.UsernamePassword](./plugins#comqlangtechtispluginaliyunusernamepassword)

	* [com.qlangtech.tis.manage.IAppSource](./plugins#comqlangtechtismanageiappsource)

		 * [com.qlangtech.tis.plugin.datax.DataFlowDataXProcessor](./plugins#comqlangtechtisplugindataxdataflowdataxprocessor)

		 * [com.qlangtech.tis.plugin.datax.DefaultDataxProcessor](./plugins#comqlangtechtisplugindataxdefaultdataxprocessor)

	* [com.qlangtech.tis.config.ParamsConfig](./plugins#comqlangtechtisconfigparamsconfig)

		 * [com.qlangtech.tis.plugin.AliyunEndpoint](./plugins#comqlangtechtispluginaliyunendpoint)

		 * [com.qlangtech.tis.plugin.HttpEndpoint](./plugins#comqlangtechtispluginhttpendpoint)

		 * [com.qlangtech.tis.plugin.datax.DataXGlobalConfig](./plugins#comqlangtechtisplugindataxdataxglobalconfig)

## tis-datax-common-rdbms-plugin.tpi

* **下载地址：** http://mirror.qlangtech.com/4.0.1/tis-plugin/tis-datax-common-rdbms-plugin.tpi

* **扩展列表：** 

## tis-datax-dameng-plugin.tpi

* **下载地址：** http://mirror.qlangtech.com/4.0.1/tis-plugin/tis-datax-dameng-plugin.tpi

* **介绍：** 

	* 实现达梦数据源
	    
	  支持达梦JDBC数据源(version: 8.1.1.193)定义
	  
	* 支持达梦类型的 DataX （Writer/Reader）插件
	  
	  1. DataXDaMengReader 插件实现从达梦数据库读数据记录功能。
	  2. DataXDaMengWriter 支持从其他端类型数据节点读取数据导入到达梦数据库中的功能
* **扩展列表：** 

	* [com.qlangtech.tis.datax.impl.DataxReader](./plugins#comqlangtechtisdataximpldataxreader)

		 * [com.qlangtech.tis.plugin.datax.dameng.reader.DataXDaMengReader](./plugins#comqlangtechtisplugindataxdamengreaderdataxdamengreader)

	* [com.qlangtech.tis.datax.impl.DataxWriter](./plugins#comqlangtechtisdataximpldataxwriter)

		 * [com.qlangtech.tis.plugin.datax.dameng.writer.DataXDaMengWriter](./plugins#comqlangtechtisplugindataxdamengwriterdataxdamengwriter)

	* [com.qlangtech.tis.plugin.ds.DataSourceFactory](./plugins#comqlangtechtisplugindsdatasourcefactory)

		 * [com.qlangtech.tis.plugin.datax.dameng.ds.DaMengDataSourceFactory](./plugins#comqlangtechtisplugindataxdamengdsdamengdatasourcefactory)

## tis-datax-dfs-plugin.tpi

* **下载地址：** http://mirror.qlangtech.com/4.0.1/tis-plugin/tis-datax-dfs-plugin.tpi

* **介绍：** 

	提供支持各种分布式文件（DFS）格式的源端、目标端（例如：Hadoop HDFS、Aliyun OSS、FTP文件格式）的读、写功能，
	
	流程支持用户设置各种个性化设置：
	1. 添加源端、目标端资源配置，例如：添加Hadoop HDFS、FTP的资源引用等。
	2. 定义源端、目标端资源文件识别器，可以通过`Wildcard`表达式，识别资源目录中的目标文件。
	3. 定义识别资源文件的文件格式，使用CSV、或者TEXT格式。可以针对每种格式的解析配置个性化参数，例如：列分隔符，空值替换符、是否拥有文件头Head、文件编码等。
	
	另外，可以通过TIS强大的扩展体系，快速添加新的`源端`、`目标端` 资源类型
* **扩展列表：** 

	* [com.qlangtech.tis.plugin.datax.format.guesstype.GuessFieldType](./plugins#comqlangtechtisplugindataxformatguesstypeguessfieldtype)

		 * [com.qlangtech.tis.plugin.datax.format.guesstype.GuessOff](./plugins#comqlangtechtisplugindataxformatguesstypeguessoff)

		 * [com.qlangtech.tis.plugin.datax.format.guesstype.GuessOn](./plugins#comqlangtechtisplugindataxformatguesstypeguesson)

	* [com.qlangtech.tis.plugin.datax.meta.MetaDataWriter](./plugins#comqlangtechtisplugindataxmetametadatawriter)

		 * [com.qlangtech.tis.plugin.datax.meta.DefaultMetaDataWriter](./plugins#comqlangtechtisplugindataxmetadefaultmetadatawriter)

		 * [com.qlangtech.tis.plugin.datax.meta.NoneMetaDataWriter](./plugins#comqlangtechtisplugindataxmetanonemetadatawriter)

	* [com.qlangtech.tis.datax.impl.DataxReader](./plugins#comqlangtechtisdataximpldataxreader)

		 * [com.qlangtech.tis.plugin.datax.DataXDFSReader](./plugins#comqlangtechtisplugindataxdataxdfsreader)

	* [com.qlangtech.tis.datax.impl.DataxWriter](./plugins#comqlangtechtisdataximpldataxwriter)

		 * [com.qlangtech.tis.plugin.datax.DataXDFSWriter](./plugins#comqlangtechtisplugindataxdataxdfswriter)

	* [com.qlangtech.tis.config.ParamsConfig](./plugins#comqlangtechtisconfigparamsconfig)

		 * [com.qlangtech.tis.plugin.datax.server.FTPServer](./plugins#comqlangtechtisplugindataxserverftpserver)

	* [com.qlangtech.tis.plugin.datax.format.FileFormat](./plugins#comqlangtechtisplugindataxformatfileformat)

		 * [com.qlangtech.tis.plugin.datax.format.CSVFormat](./plugins#comqlangtechtisplugindataxformatcsvformat)

		 * [com.qlangtech.tis.plugin.datax.format.TextFormat](./plugins#comqlangtechtisplugindataxformattextformat)

	* [com.qlangtech.tis.plugin.tdfs.DFSResMatcher](./plugins#comqlangtechtisplugintdfsdfsresmatcher)

		 * [com.qlangtech.tis.plugin.datax.resmatcher.MetaAwareDFSResMatcher](./plugins#comqlangtechtisplugindataxresmatchermetaawaredfsresmatcher)

		 * [com.qlangtech.tis.plugin.datax.resmatcher.WildcardDFSResMatcher](./plugins#comqlangtechtisplugindataxresmatcherwildcarddfsresmatcher)

	* [com.qlangtech.tis.plugin.tdfs.TDFSLinker](./plugins#comqlangtechtisplugintdfstdfslinker)

		 * [com.qlangtech.tis.plugin.datax.tdfs.impl.FtpTDFSLinker](./plugins#comqlangtechtisplugindataxtdfsimplftptdfslinker)

## tis-datax-dolphinscheduler-plugin.tpi

* **下载地址：** http://mirror.qlangtech.com/4.0.1/tis-plugin/tis-datax-dolphinscheduler-plugin.tpi

* **介绍：** 

	支持TIS中一键将数据同步任务推送到[Apache DolphinScheduler](https://dolphinscheduler.apache.org)，接下来在Apache DolphinScheduler中方便地进行数据集成任务调度
	配置工作，极大地提高了原有Apache DolphinScheduler中数据集成功能配置效率。
	
* **扩展列表：** 

	* [com.qlangtech.tis.datax.DefaultDataXProcessorManipulate](./plugins#comqlangtechtisdataxdefaultdataxprocessormanipulate)

		 * [com.qlangtech.tis.plugin.datax.doplinscheduler.export.ExportTISPipelineToDolphinscheduler](./plugins#comqlangtechtisplugindataxdoplinschedulerexportexporttispipelinetodolphinscheduler)

	* [com.qlangtech.tis.plugin.datax.doplinscheduler.export.DSTargetTables](./plugins#comqlangtechtisplugindataxdoplinschedulerexportdstargettables)

		 * [com.qlangtech.tis.plugin.datax.doplinscheduler.export.impl.LimitDSTargetTables](./plugins#comqlangtechtisplugindataxdoplinschedulerexportimpllimitdstargettables)

		 * [com.qlangtech.tis.plugin.datax.doplinscheduler.export.impl.UnlimitDSTargetTables](./plugins#comqlangtechtisplugindataxdoplinschedulerexportimplunlimitdstargettables)

	* [com.qlangtech.tis.datax.DataXJobSubmit](./plugins#comqlangtechtisdataxdataxjobsubmit)

		 * [com.qlangtech.tis.plugin.datax.doplinscheduler.DolphinschedulerDistributedSPIDataXJobSubmit](./plugins#comqlangtechtisplugindataxdoplinschedulerdolphinschedulerdistributedspidataxjobsubmit)

	* [com.qlangtech.tis.config.ParamsConfig](./plugins#comqlangtechtisconfigparamsconfig)

		 * [com.qlangtech.tis.plugin.datax.doplinscheduler.export.DolphinSchedulerEndpoint](./plugins#comqlangtechtisplugindataxdoplinschedulerexportdolphinschedulerendpoint)

	* [com.qlangtech.tis.plugin.datax.doplinscheduler.export.DSTISCallback](./plugins#comqlangtechtisplugindataxdoplinschedulerexportdstiscallback)

		 * [com.qlangtech.tis.plugin.datax.doplinscheduler.export.DSTISCallback](./plugins#comqlangtechtisplugindataxdoplinschedulerexportdstiscallback)

	* [com.qlangtech.tis.plugin.datax.doplinscheduler.export.DSTaskGroup](./plugins#comqlangtechtisplugindataxdoplinschedulerexportdstaskgroup)

		 * [com.qlangtech.tis.plugin.datax.doplinscheduler.export.DSTaskGroup](./plugins#comqlangtechtisplugindataxdoplinschedulerexportdstaskgroup)

## tis-datax-doris-plugin.tpi

* **下载地址：** http://mirror.qlangtech.com/4.0.1/tis-plugin/tis-datax-doris-plugin.tpi

* **介绍：** 

	* DorisWriter   
	
	    插件实现了写入数据到 Doris 主库的目的表的功能。在底层实现上，通过Streamload以csv格式导入数据至Doris。
	    [详细](https://github.com/alibaba/DataX/blob/master/doriswriter/doc/doriswriter.md)
	    
	* DorisSourceFactory
	
	  支持定义Doris类型的数据源   
* **扩展列表：** 

	* [com.qlangtech.tis.plugin.datax.SelectedTab](./plugins#comqlangtechtisplugindataxselectedtab)

		 * [com.qlangtech.tis.plugin.datax.doris.DorisSelectedTab](./plugins#comqlangtechtisplugindataxdorisdorisselectedtab)

	* [com.qlangtech.tis.datax.impl.DataxWriter](./plugins#comqlangtechtisdataximpldataxwriter)

		 * [com.qlangtech.tis.plugin.datax.doris.DataXDorisWriter](./plugins#comqlangtechtisplugindataxdorisdataxdoriswriter)

	* [com.qlangtech.tis.plugin.datax.doris.CreateTable](./plugins#comqlangtechtisplugindataxdoriscreatetable)

		 * [com.qlangtech.tis.plugin.datax.doris.datamodel.DuplicateCreateTable](./plugins#comqlangtechtisplugindataxdorisdatamodelduplicatecreatetable)

		 * [com.qlangtech.tis.plugin.datax.doris.datamodel.OffCreateTable](./plugins#comqlangtechtisplugindataxdorisdatamodeloffcreatetable)

		 * [com.qlangtech.tis.plugin.datax.doris.datamodel.UniqueCreateTable](./plugins#comqlangtechtisplugindataxdorisdatamodeluniquecreatetable)

	* [com.qlangtech.tis.plugin.datax.seq.SeqKey](./plugins#comqlangtechtisplugindataxseqseqkey)

		 * [com.qlangtech.tis.plugin.datax.seq.OffSeqKey](./plugins#comqlangtechtisplugindataxseqoffseqkey)

		 * [com.qlangtech.tis.plugin.datax.seq.OnSeqKey](./plugins#comqlangtechtisplugindataxseqonseqkey)

	* [com.qlangtech.tis.plugin.ds.DataSourceFactory](./plugins#comqlangtechtisplugindsdatasourcefactory)

		 * [com.qlangtech.tis.plugin.ds.doris.DorisSourceFactory](./plugins#comqlangtechtisplugindsdorisdorissourcefactory)

## tis-datax-elasticsearch-plugin.tpi

* **下载地址：** http://mirror.qlangtech.com/4.0.1/tis-plugin/tis-datax-elasticsearch-plugin.tpi

* **介绍：** 

	* 数据导入elasticsearch的插件
	
	  使用ElasticSearch的rest api接口， 批量把从reader读入的数据写入[ElasticSearch](https://www.elastic.co/cn/enterprise-search) [详细](https://github.com/alibaba/DataX/blob/master/elasticsearchwriter/doc/elasticsearchwriter.md)
* **扩展列表：** 

	* [com.qlangtech.tis.datax.impl.DataxWriter](./plugins#comqlangtechtisdataximpldataxwriter)

		 * [com.qlangtech.tis.plugin.datax.DataXElasticsearchWriter](./plugins#comqlangtechtisplugindataxdataxelasticsearchwriter)

	* [com.qlangtech.tis.config.ParamsConfig](./plugins#comqlangtechtisconfigparamsconfig)

		 * [com.qlangtech.tis.plugin.datax.elastic.ElasticEndpoint](./plugins#comqlangtechtisplugindataxelasticelasticendpoint)

## tis-datax-hdfs-aliyun-emr-plugin_hadoop_2.7.3.tpi

* **下载地址：** http://mirror.qlangtech.com/4.0.1/tis-plugin/tis-datax-hdfs-aliyun-emr-plugin/tis-datax-hdfs-aliyun-emr-plugin_hadoop_2.7.3.tpi

* **介绍：** 

	JindoFS 是阿里云针对云上存储定制的自研大数据存储服务，完全兼容 Hadoop 文件系统接口，给客户带来更加灵活、高效的计算存储方案，目前已验证支持阿里云 EMR 中所有的计算服务和引擎：Spark、Flink、Hive、MapReduce、Presto、Impala 等。JindoFS 提供了块存储模式（Block）和缓存模式（Cache）的存储模式。
	* 提供基于Aliyun JindoData 的HDFS 实现
	  
	  本插件提供基于 [jindosdk 4.6.11](https://github.com/aliyun/alibabacloud-jindodata/blob/master/docs/user/4.x/4.6.x/4.6.11/jindofs/hadoop/jindosdk_ide_hadoop.md) 封装实现，用户如需要向阿里云 EMR HDFS中写入数据
	  可选择本插件。
	  
	* JindoFS 存储系统
	
	  基于阿里云 OSS 的云原生存储系统，二进制兼容 Apache HDFS，并且基本功能对齐，提供优化的 HDFS 使用和平迁体验。是原 JindoFS Block 模式的全新升级版本。 阿里云 OSS-HDFS 服务（JindoFS 服务) 是 JindoFS 存储系统在阿里云上的服务化部署形态，和阿里云 OSS 深度融合，开箱即用，无须在自建集群部署维护 JindoFS，免运维。OSS-HDFS 服务具体介绍请参考 [OSS-HDFS服务概述](https://help.aliyun.com/zh/oss/user-guide/overview-1) 。
	
* **扩展列表：** 

	* [com.qlangtech.tis.offline.FileSystemFactory](./plugins#comqlangtechtisofflinefilesystemfactory)

		 * [com.qlangtech.tis.hdfs.impl.AliayunJindoFSFactory](./plugins#comqlangtechtishdfsimplaliayunjindofsfactory)

## tis-datax-hdfs-plugin_hadoop_2.7.3.tpi

* **下载地址：** http://mirror.qlangtech.com/4.0.1/tis-plugin/tis-datax-hdfs-plugin/tis-datax-hdfs-plugin_hadoop_2.7.3.tpi

* **介绍：** 

	提供支持[Hadoop HDFS](https://hadoop.apache.org/docs/r1.2.1/hdfs_design.html)相关的工具插件
* **扩展列表：** 

	* [com.qlangtech.tis.plugin.datax.FSFormat](./plugins#comqlangtechtisplugindataxfsformat)

		 * [com.qlangtech.tis.plugin.datax.impl.TextFSFormat](./plugins#comqlangtechtisplugindataximpltextfsformat)

	* [com.qlangtech.tis.offline.FileSystemFactory](./plugins#comqlangtechtisofflinefilesystemfactory)

		 * [com.qlangtech.tis.hdfs.impl.HdfsFileSystemFactory](./plugins#comqlangtechtishdfsimplhdfsfilesystemfactory)

## tis-datax-hdfs-reader-writer-plugin_hive_2.1.1-cdh6.3.2_hadoop_3.0.0-cdh6.3.2.tpi

* **下载地址：** http://mirror.qlangtech.com/4.0.1/tis-plugin/tis-datax-hdfs-reader-writer-plugin/tis-datax-hdfs-reader-writer-plugin_hive_2.1.1-cdh6.3.2_hadoop_3.0.0-cdh6.3.2.tpi

* **扩展列表：** 

	* [com.qlangtech.tis.plugin.tdfs.TDFSLinker](./plugins#comqlangtechtisplugintdfstdfslinker)

		 * [com.qlangtech.tis.plugin.datax.hdfs.HdfsTDFDLinker](./plugins#comqlangtechtisplugindataxhdfshdfstdfdlinker)

## tis-datax-hudi-common_hudi_0.14.1_spark_2.4.4_hive_2.3.1_hadoop_2.7.3.tpi

* **下载地址：** http://mirror.qlangtech.com/4.0.1/tis-plugin/tis-datax-hudi-common/tis-datax-hudi-common_hudi_0.14.1_spark_2.4.4_hive_2.3.1_hadoop_2.7.3.tpi

* **扩展列表：** 

	* [com.qlangtech.tis.plugin.datax.SelectedTab](./plugins#comqlangtechtisplugindataxselectedtab)

		 * [com.qlangtech.tis.plugin.datax.hudi.HudiSelectedTab](./plugins#comqlangtechtisplugindataxhudihudiselectedtab)

## tis-datax-hudi-plugin_hudi_0.14.1_spark_2.4.4_hive_2.3.1_hadoop_2.7.3.tpi

* **下载地址：** http://mirror.qlangtech.com/4.0.1/tis-plugin/tis-datax-hudi-plugin/tis-datax-hudi-plugin_hudi_0.14.1_spark_2.4.4_hive_2.3.1_hadoop_2.7.3.tpi

* **介绍：** 

	封装[Apache Hudi](https://hudi.apache.org/)，为用户提供一站式、开箱即用的千表入湖的解决方案
	
	功能：
	
	本组件整合Hudi提供的[DeltaStreamer](https://hudi.apache.org/docs/hoodie_deltastreamer#deltastreamer)功能，通过TIS生成成DeltaStreamer需要的所有Hudi表摄入所需要的
	所有配置信息（Avro schemas、从数据源抽取数据的DataX配置，Hudi表分区信息及 [Key Generation](https://hudi.apache.org/docs/key_generation)配置）
	
	配合TIS提供的各种Source Connnector组件，快速实现各种数据源`批量`入湖
	
	
	
	
	
* **扩展列表：** 

	* [com.qlangtech.tis.datax.impl.DataxWriter](./plugins#comqlangtechtisdataximpldataxwriter)

		 * [com.qlangtech.tis.plugin.datax.hudi.DataXHudiWriter](./plugins#comqlangtechtisplugindataxhudidataxhudiwriter)

	* [com.qlangtech.tis.plugin.datax.hudi.spark.SparkSubmitParams](./plugins#comqlangtechtisplugindataxhudisparksparksubmitparams)

		 * [com.qlangtech.tis.plugin.datax.hudi.spark.SparkSubmitParams](./plugins#comqlangtechtisplugindataxhudisparksparksubmitparams)

	* [com.qlangtech.tis.plugin.datax.hudi.partition.HudiTablePartition](./plugins#comqlangtechtisplugindataxhudipartitionhuditablepartition)

		 * [com.qlangtech.tis.plugin.datax.hudi.partition.FieldValBasedPartition](./plugins#comqlangtechtisplugindataxhudipartitionfieldvalbasedpartition)

		 * [com.qlangtech.tis.plugin.datax.hudi.partition.SlashEncodedDayPartition](./plugins#comqlangtechtisplugindataxhudipartitionslashencodeddaypartition)

		 * [com.qlangtech.tis.plugin.datax.hudi.partition.SlashEncodedHourPartition](./plugins#comqlangtechtisplugindataxhudipartitionslashencodedhourpartition)

	* [com.qlangtech.tis.plugin.datax.hudi.keygenerator.HudiKeyGenerator](./plugins#comqlangtechtisplugindataxhudikeygeneratorhudikeygenerator)

		 * [com.qlangtech.tis.plugin.datax.hudi.keygenerator.impl.ComplexKeyGenerator](./plugins#comqlangtechtisplugindataxhudikeygeneratorimplcomplexkeygenerator)

		 * [com.qlangtech.tis.plugin.datax.hudi.keygenerator.impl.NonePartitionKeyGenerator](./plugins#comqlangtechtisplugindataxhudikeygeneratorimplnonepartitionkeygenerator)

		 * [com.qlangtech.tis.plugin.datax.hudi.keygenerator.impl.SimpleKeyGenerator](./plugins#comqlangtechtisplugindataxhudikeygeneratorimplsimplekeygenerator)

		 * [com.qlangtech.tis.plugin.datax.hudi.keygenerator.impl.TimeStampKeyGenerator](./plugins#comqlangtechtisplugindataxhudikeygeneratorimpltimestampkeygenerator)

## tis-datax-kafka-plugin.tpi

* **下载地址：** http://mirror.qlangtech.com/4.0.1/tis-plugin/tis-datax-kafka-plugin.tpi

* **介绍：** 

	提供消息中间件[KafKa](https://kafka.apache.org/) 操作数据的能力
	
	* 目前支持向 KafKa 中写入数据
	
	
	
	
* **扩展列表：** 

	* [com.qlangtech.tis.plugin.datax.SelectedTab](./plugins#comqlangtechtisplugindataxselectedtab)

		 * [com.qlangtech.tis.plugins.datax.kafka.writer.KafkaSelectedTab](./plugins#comqlangtechtispluginsdataxkafkawriterkafkaselectedtab)

	* [com.qlangtech.tis.datax.impl.DataxWriter](./plugins#comqlangtechtisdataximpldataxwriter)

		 * [com.qlangtech.tis.plugins.datax.kafka.writer.DataXKafkaWriter](./plugins#comqlangtechtispluginsdataxkafkawriterdataxkafkawriter)

	* [com.qlangtech.tis.plugins.datax.kafka.writer.protocol.KafkaProtocol](./plugins#comqlangtechtispluginsdataxkafkawriterprotocolkafkaprotocol)

		 * [com.qlangtech.tis.plugins.datax.kafka.writer.protocol.KafkaPlaintext](./plugins#comqlangtechtispluginsdataxkafkawriterprotocolkafkaplaintext)

		 * [com.qlangtech.tis.plugins.datax.kafka.writer.protocol.KafkaSaslPlaintext](./plugins#comqlangtechtispluginsdataxkafkawriterprotocolkafkasaslplaintext)

		 * [com.qlangtech.tis.plugins.datax.kafka.writer.protocol.KafkaSaslSsl](./plugins#comqlangtechtispluginsdataxkafkawriterprotocolkafkasaslssl)

	* [com.qlangtech.tis.plugins.datax.kafka.reader.messageformat.KafkaMessageFormat](./plugins#comqlangtechtispluginsdataxkafkareadermessageformatkafkamessageformat)

		 * [com.qlangtech.tis.plugins.datax.kafka.reader.messageformat.KafkaAvro](./plugins#comqlangtechtispluginsdataxkafkareadermessageformatkafkaavro)

		 * [com.qlangtech.tis.plugins.datax.kafka.reader.messageformat.KafkaJson](./plugins#comqlangtechtispluginsdataxkafkareadermessageformatkafkajson)

	* [com.qlangtech.tis.plugins.datax.kafka.reader.subscriptionmethod.KafkaSubscriptionMethod](./plugins#comqlangtechtispluginsdataxkafkareadersubscriptionmethodkafkasubscriptionmethod)

		 * [com.qlangtech.tis.plugins.datax.kafka.reader.subscriptionmethod.KafkaManuallyAssignAListOfPartitions](./plugins#comqlangtechtispluginsdataxkafkareadersubscriptionmethodkafkamanuallyassignalistofpartitions)

		 * [com.qlangtech.tis.plugins.datax.kafka.reader.subscriptionmethod.KafkaSubscribeToAllTopicsMatchingSpecifiedPattern](./plugins#comqlangtechtispluginsdataxkafkareadersubscriptionmethodkafkasubscribetoalltopicsmatchingspecifiedpattern)

## tis-datax-local-embedded-executor.tpi

* **下载地址：** http://mirror.qlangtech.com/4.0.1/tis-plugin/tis-datax-local-embedded-executor.tpi

* **介绍：** 

	
	批量任务触发组件，有两种任务提交方式：
	
	本地独立模式：在本地启动独立进程，特点是占用资源少轻量化。所有批量导入任务都在单个机器节点上执行，所以并发吞肚率比较低
* **扩展列表：** 

	* [com.qlangtech.tis.datax.DataXJobSubmit](./plugins#comqlangtechtisdataxdataxjobsubmit)

		 * [com.qlangtech.tis.plugin.datax.EmbeddedDataXJobSubmit](./plugins#comqlangtechtisplugindataxembeddeddataxjobsubmit)

## tis-datax-local-executor.tpi

* **下载地址：** http://mirror.qlangtech.com/4.0.1/tis-plugin/tis-datax-local-executor.tpi

* **介绍：** 

	
	批量任务触发组件，有两种任务提交方式：
	
	本地独立模式：在本地启动独立进程，特点是占用资源少轻量化。所有批量导入任务都在单个机器节点上执行，所以并发吞肚率比较低
* **扩展列表：** 

	* [com.qlangtech.tis.datax.DataXJobSubmit](./plugins#comqlangtechtisdataxdataxjobsubmit)

		 * [com.qlangtech.tis.plugin.datax.LocalDataXJobSubmit](./plugins#comqlangtechtisplugindataxlocaldataxjobsubmit)

	* [com.qlangtech.tis.config.ParamsConfig](./plugins#comqlangtechtisconfigparamsconfig)

		 * [com.qlangtech.tis.plugin.datax.LocalDataXJobSubmitParams](./plugins#comqlangtechtisplugindataxlocaldataxjobsubmitparams)

## tis-datax-local-powerjob-executor.tpi

* **下载地址：** http://mirror.qlangtech.com/4.0.1/tis-plugin/tis-datax-local-powerjob-executor.tpi

* **扩展列表：** 

	* [com.qlangtech.tis.datax.job.DataXJobWorker](./plugins#comqlangtechtisdataxjobdataxjobworker)

		 * [com.qlangtech.tis.plugin.datax.powerjob.K8SDataXPowerJobJobTemplate](./plugins#comqlangtechtisplugindataxpowerjobk8sdataxpowerjobjobtemplate)

		 * [com.qlangtech.tis.plugin.datax.powerjob.K8SDataXPowerJobOverwriteTemplate](./plugins#comqlangtechtisplugindataxpowerjobk8sdataxpowerjoboverwritetemplate)

		 * [com.qlangtech.tis.plugin.datax.powerjob.K8SDataXPowerJobUsingExistCluster](./plugins#comqlangtechtisplugindataxpowerjobk8sdataxpowerjobusingexistcluster)

	* [com.qlangtech.tis.datax.DataXJobSubmit](./plugins#comqlangtechtisdataxdataxjobsubmit)

		 * [com.qlangtech.tis.plugin.datax.DistributedPowerJobDataXJobSubmit](./plugins#comqlangtechtisplugindataxdistributedpowerjobdataxjobsubmit)

	* [com.qlangtech.tis.plugin.datax.powerjob.TriggerStrategy](./plugins#comqlangtechtisplugindataxpowerjobtriggerstrategy)

		 * [com.qlangtech.tis.plugin.datax.powerjob.impl.trigger.CrontabTriggerStrategy](./plugins#comqlangtechtisplugindataxpowerjobimpltriggercrontabtriggerstrategy)

		 * [com.qlangtech.tis.plugin.datax.powerjob.impl.trigger.NoneTriggerStrategy](./plugins#comqlangtechtisplugindataxpowerjobimpltriggernonetriggerstrategy)

## tis-datax-mariadb-plugin.tpi

* **下载地址：** http://mirror.qlangtech.com/4.0.1/tis-plugin/tis-datax-mariadb-plugin.tpi

* **介绍：** 

	封装MariaDB作为数据源的DataSource插件，可以向TIS导入MySQL中的数据表作后续分析处理
	* 封装`MariaDB`数据源驱动
	
	  驱动版本为[MariaDB Connector/J is for Java 8:3.4.1](https://mariadb.com/downloads/connectors/connectors-data-access/java8-connector), 支持`MariaDB`数据源以JDBC的方式连接
	
	* MariaReader
	
	  MariaReader插件实现了从MariaDB读取数据。在底层实现上，MariaReader通过JDBC连接远程MariaDB数据库，并执行相应的sql语句将数据从MariaDB库中SELECT出来
	  
	* MariaWriter
	
	  实现了Alibaba MariaWriter 插件，写入数据到 MariaDB 主库的目的表的功能。在底层实现上， MariaWriter 通过 JDBC 连接远程 MariaDB 数据库，并执行相应的 insert into ... 或者 ( replace into ...) 的 sql 语句将数据写入 MariaDB，内部会分批次提交入库。
* **扩展列表：** 

	* [com.qlangtech.tis.datax.impl.DataxReader](./plugins#comqlangtechtisdataximpldataxreader)

		 * [com.qlangtech.tis.plugin.datax.DataXMariaReader](./plugins#comqlangtechtisplugindataxdataxmariareader)

	* [com.qlangtech.tis.datax.impl.DataxWriter](./plugins#comqlangtechtisdataximpldataxwriter)

		 * [com.qlangtech.tis.plugin.datax.DataXMariaWriter](./plugins#comqlangtechtisplugindataxdataxmariawriter)

	* [com.qlangtech.tis.plugin.ds.DataSourceFactory](./plugins#comqlangtechtisplugindsdatasourcefactory)

		 * [com.qlangtech.tis.plugin.datax.MariaDBDataSourceFactory](./plugins#comqlangtechtisplugindataxmariadbdatasourcefactory)

## tis-datax-mongodb-plugin.tpi

* **下载地址：** http://mirror.qlangtech.com/4.0.1/tis-plugin/tis-datax-mongodb-plugin.tpi

* **介绍：** 

	* MongoDB DataSource 插件封装了MongoDB作为数据源的插件，可以向TIS导入MongoDB的数据表进行后续处理
	* MongoDBReader 封装alibaba DataX reader，插件利用 MongoDB 的java客户端MongoClient进行MongoDB的读操作。最新版本的Mongo已经将DB锁的粒度从DB级别降低到document级别，配合上MongoDB强大的索引功能，基本可以达到高性能的读取MongoDB的需求。[详细](https://github.com/alibaba/DataX/blob/master/mongodbreader/doc/mongodbreader.md)
	* MongoDBWriter 封装alibaba DataX writer，插件利用 MongoDB 的java客户端MongoClient进行MongoDB的写操作。最新版本的Mongo已经将DB锁的粒度从DB级别降低到document级别，配合上MongoDB强大的索引功能，基本可以满足数据源向MongoDB写入数据的需求，针对数据更新的需求，通过配置业务主键的方式也可以实现[详细](https://github.com/alibaba/DataX/blob/master/mongodbwriter/doc/mongodbwriter.md)
* **扩展列表：** 

	* [com.qlangtech.tis.plugin.datax.SelectedTabExtend](./plugins#comqlangtechtisplugindataxselectedtabextend)

		 * [com.qlangtech.tis.plugin.datax.mongo.MongoSelectedTabExtend](./plugins#comqlangtechtisplugindataxmongomongoselectedtabextend)

	* [com.qlangtech.tis.plugin.datax.SelectedTab](./plugins#comqlangtechtisplugindataxselectedtab)

		 * [com.qlangtech.tis.plugin.datax.mongo.MongoWriterSelectedTab](./plugins#comqlangtechtisplugindataxmongomongowriterselectedtab)

	* [com.qlangtech.tis.plugin.datax.mongo.UpsertSupport](./plugins#comqlangtechtisplugindataxmongoupsertsupport)

		 * [com.qlangtech.tis.plugin.datax.mongo.OffUpsertSupport](./plugins#comqlangtechtisplugindataxmongooffupsertsupport)

		 * [com.qlangtech.tis.plugin.datax.mongo.OnUpsertSupport](./plugins#comqlangtechtisplugindataxmongoonupsertsupport)

	* [com.qlangtech.tis.datax.impl.DataxReader](./plugins#comqlangtechtisdataximpldataxreader)

		 * [com.qlangtech.tis.plugin.datax.DataXMongodbReader](./plugins#comqlangtechtisplugindataxdataxmongodbreader)

	* [com.qlangtech.tis.datax.impl.DataxWriter](./plugins#comqlangtechtisdataximpldataxwriter)

		 * [com.qlangtech.tis.plugin.datax.DataXMongodbWriter](./plugins#comqlangtechtisplugindataxdataxmongodbwriter)

	* [com.qlangtech.tis.plugin.datax.mongo.reader.ReaderFilter](./plugins#comqlangtechtisplugindataxmongoreaderreaderfilter)

		 * [com.qlangtech.tis.plugin.datax.mongo.reader.ReaderFilteOff](./plugins#comqlangtechtisplugindataxmongoreaderreaderfilteoff)

		 * [com.qlangtech.tis.plugin.datax.mongo.reader.ReaderFilterNormalQuery](./plugins#comqlangtechtisplugindataxmongoreaderreaderfilternormalquery)

		 * [com.qlangtech.tis.plugin.datax.mongo.reader.ReaderFilterOn](./plugins#comqlangtechtisplugindataxmongoreaderreaderfilteron)

	* [com.qlangtech.tis.plugin.ds.DataSourceFactory](./plugins#comqlangtechtisplugindsdatasourcefactory)

		 * [com.qlangtech.tis.plugin.ds.mangodb.MangoDBDataSourceFactory](./plugins#comqlangtechtisplugindsmangodbmangodbdatasourcefactory)

## tis-datax-odps-plugin.tpi

* **下载地址：** http://mirror.qlangtech.com/4.0.1/tis-plugin/tis-datax-odps-plugin.tpi

* **介绍：** 

	* 介绍： ODPSWriter插件用于实现往ODPS插入或者更新数据，主要提供给etl开发同学将业务数据导入odps，适合于TB,GB数量级的数据传输，如果需要传输PB量级的数据，请选择dt task工具 ;
	* 实现原理：在底层实现上，ODPSWriter是通过DT Tunnel写入ODPS系统的，有关ODPS的更多技术细节请参看 ODPS主站 https://data.aliyun.com/product/odps 和ODPS产品文档 https://help.aliyun.com/product/27797.html
* **扩展列表：** 

	* [com.qlangtech.tis.datax.impl.DataxWriter](./plugins#comqlangtechtisdataximpldataxwriter)

		 * [com.qlangtech.tis.plugin.datax.DataXOdpsWriter](./plugins#comqlangtechtisplugindataxdataxodpswriter)

	* [com.qlangtech.tis.plugin.ds.DataSourceFactory](./plugins#comqlangtechtisplugindsdatasourcefactory)

		 * [com.qlangtech.tis.plugin.datax.odps.OdpsDataSourceFactory](./plugins#comqlangtechtisplugindataxodpsodpsdatasourcefactory)

## tis-datax-oracle-plugin.tpi

* **下载地址：** http://mirror.qlangtech.com/4.0.1/tis-plugin/tis-datax-oracle-plugin.tpi

* **介绍：** 

	* 封装Oracle作为数据源的DataSource插件，可以向TIS导入Oracle中的数据表作后续分析处理
	* OracleReader
	  
	  实现了alibaba DataXReader从Oracle读取数据。在底层实现上，OracleReader通过JDBC连接远程Oracle数据库，并执行相应的sql语句将数据从Oracle库中SELECT出来。[详细](https://github.com/alibaba/DataX/blob/master/oraclereader/doc/oraclereader.md)
	
	* OracleWriter
	
	  实现了alibaba DataXWriter写入数据到 Oracle 主库的目的表的功能。在底层实现上， OracleWriter 通过 JDBC 连接远程 Oracle 数据库，并执行相应的 insert into ... sql 语句将数据写入 Oracle，内部会分批次提交入库。
	 
	  OracleWriter 面向ETL开发工程师，他们使用 OracleWriter 从数仓导入数据到 Oracle。同时 OracleWriter 亦可以作为数据迁移工具为DBA等用户提供服务。 [详细](https://github.com/alibaba/DataX/blob/master/oraclewriter/doc/oraclewriter.md) 
	  
* **扩展列表：** 

	* [com.qlangtech.tis.datax.impl.DataxReader](./plugins#comqlangtechtisdataximpldataxreader)

		 * [com.qlangtech.tis.plugin.datax.DataXOracleReader](./plugins#comqlangtechtisplugindataxdataxoraclereader)

	* [com.qlangtech.tis.plugin.ds.oracle.Authorized](./plugins#comqlangtechtisplugindsoracleauthorized)

		 * [com.qlangtech.tis.plugin.ds.oracle.auth.AcceptAuthorized](./plugins#comqlangtechtisplugindsoracleauthacceptauthorized)

		 * [com.qlangtech.tis.plugin.ds.oracle.auth.NoneAuth](./plugins#comqlangtechtisplugindsoracleauthnoneauth)

	* [com.qlangtech.tis.datax.impl.DataxWriter](./plugins#comqlangtechtisdataximpldataxwriter)

		 * [com.qlangtech.tis.plugin.datax.DataXOracleWriter](./plugins#comqlangtechtisplugindataxdataxoraclewriter)

	* [com.qlangtech.tis.plugin.ds.oracle.ConnEntity](./plugins#comqlangtechtisplugindsoracleconnentity)

		 * [com.qlangtech.tis.plugin.ds.oracle.impl.SIDConnEntity](./plugins#comqlangtechtisplugindsoracleimplsidconnentity)

		 * [com.qlangtech.tis.plugin.ds.oracle.impl.ServiceNameConnEntity](./plugins#comqlangtechtisplugindsoracleimplservicenameconnentity)

	* [com.qlangtech.tis.plugin.ds.DataSourceFactory](./plugins#comqlangtechtisplugindsdatasourcefactory)

		 * [com.qlangtech.tis.plugin.ds.oracle.OracleDataSourceFactory](./plugins#comqlangtechtisplugindsoracleoracledatasourcefactory)

## tis-datax-oss-plugin.tpi

* **下载地址：** http://mirror.qlangtech.com/4.0.1/tis-plugin/tis-datax-oss-plugin.tpi

* **介绍：** 

	为Alibaba DataX OOS reader、writer插件提供基于UI的开箱即用的插件实现
	
	* OSSReader提供了读取OSS数据存储的能力。在底层实现上，OSSReader使用OSS官方Java SDK获取OSS数据，并转换为DataX传输协议传递给Writer。[详细](https://github.com/alibaba/DataX/blob/master/ossreader/doc/ossreader.md)
	* OSSWriter提供了向OSS写入类CSV格式的一个或者多个表文件。[详细](https://github.com/alibaba/DataX/blob/master/osswriter/doc/osswriter.md)
* **扩展列表：** 

	* [com.qlangtech.tis.plugin.tdfs.TDFSLinker](./plugins#comqlangtechtisplugintdfstdfslinker)

		 * [com.qlangtech.tis.plugin.datax.aliyunoss.AliyunOSSTDFSLinker](./plugins#comqlangtechtisplugindataxaliyunossaliyunosstdfslinker)

## tis-datax-postgresql-plugin.tpi

* **下载地址：** http://mirror.qlangtech.com/4.0.1/tis-plugin/tis-datax-postgresql-plugin.tpi

* **介绍：** 

	* 封装PostgreSQL作为数据源的DataSource插件，可以向TIS导入PostgreSQL中的数据表作后续分析处理
	* PostgresqlReader
	  
	  实现了Alibaba DataXReader从PostgreSQL读取数据。在底层实现上，PostgresqlReader通过JDBC连接远程PostgreSQL数据库，并执行相应的sql语句将数据从PostgreSQL库中SELECT出来[详细](https://github.com/alibaba/DataX/blob/master/postgresqlreader/doc/postgresqlreader.md)
	* PostgresqlWriter
	
	  实现了Alibaba DataXWriter 插件，写入数据到 PostgreSQL主库目的表的功能。在底层实现上，PostgresqlWriter通过JDBC连接远程 PostgreSQL 数据库，并执行相应的 insert into ... sql 语句将数据写入 PostgreSQL，内部会分批次提交入库。 [详细](https://github.com/alibaba/DataX/blob/master/postgresqlwriter/doc/postgresqlwriter.md)
	  
	* 使用postgresql JDBC驱动（Java JDBC 4.2 (JRE 8+) driver for PostgreSQL database），版本：**42.3.1** [https://github.com/pgjdbc/pgjdbc](https://github.com/pgjdbc/pgjdbc)
* **扩展列表：** 

	* [com.qlangtech.tis.datax.impl.DataxReader](./plugins#comqlangtechtisdataximpldataxreader)

		 * [com.qlangtech.tis.plugin.datax.DataXPostgresqlReader](./plugins#comqlangtechtisplugindataxdataxpostgresqlreader)

	* [com.qlangtech.tis.datax.impl.DataxWriter](./plugins#comqlangtechtisdataximpldataxwriter)

		 * [com.qlangtech.tis.plugin.datax.DataXPostgresqlWriter](./plugins#comqlangtechtisplugindataxdataxpostgresqlwriter)

	* [com.qlangtech.tis.plugin.ds.DataSourceFactory](./plugins#comqlangtechtisplugindsdatasourcefactory)

		 * [com.qlangtech.tis.plugin.ds.postgresql.PGDataSourceFactory](./plugins#comqlangtechtisplugindspostgresqlpgdatasourcefactory)

## tis-datax-sqlserver-plugin.tpi

* **下载地址：** http://mirror.qlangtech.com/4.0.1/tis-plugin/tis-datax-sqlserver-plugin.tpi

* **介绍：** 

	* 封装SqlServer作为数据源的DataSource插件，可以向TIS导入SqlServer中的数据表作后续分析处理
	* SqlServerReader
	  插件实现了从SqlServer读取数据。在底层实现上，SqlServerReader通过JDBC连接远程SqlServer数据库，并执行相应的sql语句将数据从SqlServer库中SELECT出来。[详细](https://github.com/alibaba/DataX/blob/master/sqlserverreader/doc/sqlserverreader.md)
* **扩展列表：** 

	* [com.qlangtech.tis.datax.impl.DataxReader](./plugins#comqlangtechtisdataximpldataxreader)

		 * [com.qlangtech.tis.plugin.datax.DataXSqlserverReader](./plugins#comqlangtechtisplugindataxdataxsqlserverreader)

	* [com.qlangtech.tis.datax.impl.DataxWriter](./plugins#comqlangtechtisdataximpldataxwriter)

		 * [com.qlangtech.tis.plugin.datax.DataXSqlserverWriter](./plugins#comqlangtechtisplugindataxdataxsqlserverwriter)

## tis-datax-sqlserver-v2008-plugin.tpi

* **下载地址：** http://mirror.qlangtech.com/4.0.1/tis-plugin/tis-datax-sqlserver-v2008-plugin.tpi

* **介绍：** 

	* 封装SqlServer作为数据源的DataSource插件，可以向TIS导入SqlServer中的数据表作后续分析处理
	* 受支持的 SQL Server 版本：
	  * Microsoft SQL Server 2016
	  * Microsoft SQL Server 2014
	  * Microsoft SQL Server 2012
	  * Microsoft SQL Server 2008 R2
	  * Microsoft SQL Server 2008
	  * Microsoft SQL Server 2005 - 仅受适用于 SQL Server 的 Microsoft JDBC Driver 4.0 支持
	  * Azure SQL 数据库
	  * Azure SQL 数据仓库或并行数据仓库
	* Microsoft SQL Server [驱动详细说明](https://www.microsoft.com/zh-cn/download/details.aspx?id=54671&751be11f-ede8-5a0c-058c-2ee190a24fa6=True&fa43d42b-25b5-4a42-fe9b-1634f450f5ee=True%E3%80%82)
	* TIS相关Issue https://github.com/datavane/tis/issues/186
	  
* **扩展列表：** 

	* [com.qlangtech.tis.plugin.ds.DataSourceFactory](./plugins#comqlangtechtisplugindsdatasourcefactory)

		 * [com.qlangtech.tis.plugin.ds.sqlserver.SqlServer2008DatasourceFactory](./plugins#comqlangtechtisplugindssqlserversqlserver2008datasourcefactory)

## tis-datax-sqlserver-v2019-plugin.tpi

* **下载地址：** http://mirror.qlangtech.com/4.0.1/tis-plugin/tis-datax-sqlserver-v2019-plugin.tpi

* **介绍：** 

	* 封装SqlServer作为数据源的DataSource插件，可以向TIS导入SqlServer中的数据表作后续分析处理
	* 受支持的 SQL Server 版本：
	  * Microsoft SQL Server 2019
	  * Azure SQL 数据库
	  * Azure SQL 数据仓库或并行数据仓库
	* Microsoft SQL Server [驱动详细说明](https://learn.microsoft.com/en-us/sql/connect/jdbc/microsoft-jdbc-driver-for-sql-server?view=sql-server-ver15)
	* TIS相关Issue https://github.com/datavane/tis/issues/186
	  
* **扩展列表：** 

	* [com.qlangtech.tis.plugin.ds.DataSourceFactory](./plugins#comqlangtechtisplugindsdatasourcefactory)

		 * [com.qlangtech.tis.plugin.ds.sqlserver.SqlServer2019DatasourceFactory](./plugins#comqlangtechtisplugindssqlserversqlserver2019datasourcefactory)

## tis-datax-starrocks-plugin.tpi

* **下载地址：** http://mirror.qlangtech.com/4.0.1/tis-plugin/tis-datax-starrocks-plugin.tpi

* **介绍：** 

	*  StarRocksWriter  
	
	    插件实现了写入数据到 StarRocks 主库的目的表的功能。在底层实现上，StarRocksWriter 通过Streamload以csv格式导入数据至StarRocks。
	    [详细](https://github.com/StarRocks/DataX/blob/main/starrockswriter/doc/starrockswriter.md)
	    
	    该插件现同时支持StarRocks数据库
	    
	*  StarRocksSourceFactory
	
	  支持定义StarRocks类型的数据源   
* **扩展列表：** 

	* [com.qlangtech.tis.datax.impl.DataxWriter](./plugins#comqlangtechtisdataximpldataxwriter)

		 * [com.qlangtech.tis.plugin.datax.starrocks.DataXStarRocksWriter](./plugins#comqlangtechtisplugindataxstarrocksdataxstarrockswriter)

	* [com.qlangtech.tis.plugin.ds.DataSourceFactory](./plugins#comqlangtechtisplugindsdatasourcefactory)

		 * [com.qlangtech.tis.plugin.ds.starrocks.StarRocksSourceFactory](./plugins#comqlangtechtisplugindsstarrocksstarrockssourcefactory)

## tis-ds-mysql-plugin.tpi

* **下载地址：** http://mirror.qlangtech.com/4.0.1/tis-plugin/tis-ds-mysql-plugin.tpi

* **介绍：** 

	* 封装MySQL作为数据源的DataSource插件，可以向TIS导入MySQL中的数据表作后续分析处理
	* MysqlReader
	
	  MysqlReader插件实现了从Mysql读取数据。在底层实现上，MysqlReader通过JDBC连接远程Mysql数据库，并执行相应的sql语句将数据从mysql库中SELECT出来[详细](https://github.com/alibaba/DataX/blob/master/mysqlreader/doc/mysqlreader.md)
	  
	* MysqlWriter
	
	  实现了Alibaba DataXWriter 插件，写入数据到 Mysql 主库的目的表的功能。在底层实现上， MysqlWriter 通过 JDBC 连接远程 Mysql 数据库，并执行相应的 insert into ... 或者 ( replace into ...) 的 sql 语句将数据写入 Mysql，内部会分批次提交入库，需要数据库本身采用 innodb 引擎。 [详细](https://github.com/alibaba/DataX/blob/master/mysqlwriter/doc/mysqlwriter.md)
* **扩展列表：** 

	* [com.qlangtech.tis.datax.impl.DataxReader](./plugins#comqlangtechtisdataximpldataxreader)

		 * [com.qlangtech.tis.plugin.datax.DataxMySQLReader](./plugins#comqlangtechtisplugindataxdataxmysqlreader)

	* [com.qlangtech.tis.datax.impl.DataxWriter](./plugins#comqlangtechtisdataximpldataxwriter)

		 * [com.qlangtech.tis.plugin.datax.DataxMySQLWriter](./plugins#comqlangtechtisplugindataxdataxmysqlwriter)

## tis-ds-mysql-v5-plugin.tpi

* **下载地址：** http://mirror.qlangtech.com/4.0.1/tis-plugin/tis-ds-mysql-v5-plugin.tpi

* **介绍：** 

	* 封装MySQL数据源驱动
	  
	  驱动版本为mysql-connector-java:5.1.30, 支持MySQL服务端5.X的数据源以JDBC的方式连接
* **扩展列表：** 

	* [com.qlangtech.tis.plugin.ds.DataSourceFactory](./plugins#comqlangtechtisplugindsdatasourcefactory)

		 * [com.qlangtech.tis.plugin.ds.mysql.MySQLV5DataSourceFactory](./plugins#comqlangtechtisplugindsmysqlmysqlv5datasourcefactory)

## tis-ds-mysql-v8-plugin.tpi

* **下载地址：** http://mirror.qlangtech.com/4.0.1/tis-plugin/tis-ds-mysql-v8-plugin.tpi

* **介绍：** 

	* 封装MySQL数据源驱动
	  
	  驱动版本为mysql-connector-java:8.0.25, 支持MySQL服务端8.X的数据源以JDBC的方式连接
* **扩展列表：** 

	* [com.qlangtech.tis.plugin.ds.DataSourceFactory](./plugins#comqlangtechtisplugindsdatasourcefactory)

		 * [com.qlangtech.tis.plugin.ds.mysql.MySQLV8DataSourceFactory](./plugins#comqlangtechtisplugindsmysqlmysqlv8datasourcefactory)

## tis-flink-cdc-mongdb-plugin.tpi

* **下载地址：** http://mirror.qlangtech.com/4.0.1/tis-plugin/tis-flink-cdc-mongdb-plugin.tpi

* **扩展列表：** 

## tis-flink-cdc-mysql-plugin.tpi

* **下载地址：** http://mirror.qlangtech.com/4.0.1/tis-plugin/tis-flink-cdc-mysql-plugin.tpi

* **介绍：** 

	
	## MySQL CDC Connector
	
	The MySQL CDC connector allows for reading snapshot data and incremental data from MySQL database. This document describes how to setup the MySQL CDC connector to run SQL queries against MySQL databases.
	[https://ververica.github.io/flink-cdc-connectors/master/content/connectors/mysql-cdc.html](https://ververica.github.io/flink-cdc-connectors/master/content/connectors/mysql-cdc.html)
	
	## MariaDB CDC Connector
* **扩展列表：** 

	* [com.qlangtech.tis.plugins.incr.flink.cdc.mysql.startup.StartupOptions](./plugins#comqlangtechtispluginsincrflinkcdcmysqlstartupstartupoptions)

		 * [com.qlangtech.tis.plugins.incr.flink.cdc.mysql.startup.EarliestStartupOptions](./plugins#comqlangtechtispluginsincrflinkcdcmysqlstartupearlieststartupoptions)

		 * [com.qlangtech.tis.plugins.incr.flink.cdc.mysql.startup.InitialStartupOptions](./plugins#comqlangtechtispluginsincrflinkcdcmysqlstartupinitialstartupoptions)

		 * [com.qlangtech.tis.plugins.incr.flink.cdc.mysql.startup.LatestStartupOptions](./plugins#comqlangtechtispluginsincrflinkcdcmysqlstartuplateststartupoptions)

		 * [com.qlangtech.tis.plugins.incr.flink.cdc.mysql.startup.TimestampStartupOptions](./plugins#comqlangtechtispluginsincrflinkcdcmysqlstartuptimestampstartupoptions)

	* [com.qlangtech.tis.async.message.client.consumer.impl.MQListenerFactory](./plugins#comqlangtechtisasyncmessageclientconsumerimplmqlistenerfactory)

		 * [com.qlangtech.tis.plugins.incr.flink.cdc.maria.FlinkCDCMariaDBSourceFactory](./plugins#comqlangtechtispluginsincrflinkcdcmariaflinkcdcmariadbsourcefactory)

		 * [com.qlangtech.tis.plugins.incr.flink.cdc.mysql.FlinkCDCMySQLSourceFactory](./plugins#comqlangtechtispluginsincrflinkcdcmysqlflinkcdcmysqlsourcefactory)

## tis-flink-cdc-oracle-plugin.tpi

* **下载地址：** http://mirror.qlangtech.com/4.0.1/tis-plugin/tis-flink-cdc-oracle-plugin.tpi

* **介绍：** 

	
	## Oracle CDC Connector
	
	The Oracle CDC connector allows for reading snapshot data and incremental data from Oracle database. This document describes how to setup the Oracle CDC connector to run SQL queries against Oracle databases.
	[https://ververica.github.io/flink-cdc-connectors/master/content/connectors/oracle-cdc.html#startup-reading-position](https://ververica.github.io/flink-cdc-connectors/master/content/connectors/oracle-cdc.html#startup-reading-position)
	
* **扩展列表：** 

## tis-flink-cdc-postgresql-plugin.tpi

* **下载地址：** http://mirror.qlangtech.com/4.0.1/tis-plugin/tis-flink-cdc-postgresql-plugin.tpi

* **扩展列表：** 

	* [com.qlangtech.tis.async.message.client.consumer.impl.MQListenerFactory](./plugins#comqlangtechtisasyncmessageclientconsumerimplmqlistenerfactory)

		 * [com.qlangtech.plugins.incr.flink.cdc.postgresql.FlinkCDCPostreSQLSourceFactory](./plugins#comqlangtechpluginsincrflinkcdcpostgresqlflinkcdcpostresqlsourcefactory)

## tis-flink-chunjun-clickhouse-plugin.tpi

* **下载地址：** http://mirror.qlangtech.com/4.0.1/tis-plugin/tis-flink-chunjun-clickhouse-plugin.tpi

* **介绍：** 

	* 封装[Chunjun Clickhouse Sink](https://dtstack.github.io/chunjun/documents/ChunJun%E8%BF%9E%E6%8E%A5%E5%99%A8@clickhouse@clickhouse-sink)组件为TIS用户提供向Clickhouse流式写入数据的功能
	
* **扩展列表：** 

	* [com.qlangtech.tis.plugin.incr.TISSinkFactory](./plugins#comqlangtechtispluginincrtissinkfactory)

		 * [com.qlangtech.plugins.incr.flink.chunjun.clickhouse.sink.ChunjunClickhouseSinkFactory](./plugins#comqlangtechpluginsincrflinkchunjunclickhousesinkchunjunclickhousesinkfactory)

## tis-flink-chunjun-dameng-plugin.tpi

* **下载地址：** http://mirror.qlangtech.com/4.0.1/tis-plugin/tis-flink-chunjun-dameng-plugin.tpi

* **介绍：** 

	* 封装[Chunjun Dameng Sink](https://github.com/qlangtech/chunjun/tree/2c9e803dec955b1efd3c06d4820cda2071bf93de/chunjun-connectors/chunjun-connector-dameng)组件为TIS用户提供向
	  [Dameng](https://eco.dameng.com/document/dm/zh-cn/start/index.html) 流式写入数据的功能
	
* **扩展列表：** 

	* [com.qlangtech.tis.plugin.incr.TISSinkFactory](./plugins#comqlangtechtispluginincrtissinkfactory)

		 * [com.qlangtech.plugins.incr.flink.chunjun.dameng.sink.ChunjunDamengSinkFactory](./plugins#comqlangtechpluginsincrflinkchunjundamengsinkchunjundamengsinkfactory)

## tis-flink-chunjun-doris-plugin.tpi

* **下载地址：** http://mirror.qlangtech.com/4.0.1/tis-plugin/tis-flink-chunjun-doris-plugin.tpi

* **介绍：** 

	* 封装[Chunjun Doris Sink](https://dtstack.github.io/chunjun/documents/ChunJun%E8%BF%9E%E6%8E%A5%E5%99%A8@doris@dorisbatch-sink)组件为TIS用户提供向
	[Apache Doris](https://doris.apache.org/) 流式写入数据的功能
	
* **扩展列表：** 

	* [com.qlangtech.tis.plugin.incr.TISSinkFactory](./plugins#comqlangtechtispluginincrtissinkfactory)

		 * [com.qlangtech.plugins.incr.flink.chunjun.doris.sink.ChunjunDorisSinkFactory](./plugins#comqlangtechpluginsincrflinkchunjundorissinkchunjundorissinkfactory)

## tis-flink-chunjun-kafka-plugin.tpi

* **下载地址：** http://mirror.qlangtech.com/4.0.1/tis-plugin/tis-flink-chunjun-kafka-plugin.tpi

* **扩展列表：** 

	* [com.qlangtech.tis.plugin.incr.TISSinkFactory](./plugins#comqlangtechtispluginincrtissinkfactory)

		 * [com.qlangtech.tis.plugins.incr.flink.chunjun.kafka.sink.ChujunKafkaSinkFactory](./plugins#comqlangtechtispluginsincrflinkchunjunkafkasinkchujunkafkasinkfactory)

## tis-flink-chunjun-mysql-plugin.tpi

* **下载地址：** http://mirror.qlangtech.com/4.0.1/tis-plugin/tis-flink-chunjun-mysql-plugin.tpi

* **介绍：** 

	* 封装纯钧 [Chunjun](https://dtstack.github.io/chunjun/) 构建 MySQL实时Sink功能，可以将数据实时写入到指定的MySQL数据库当中。[MySQL Sink文档](https://dtstack.github.io/chunjun/documents/ChunJun%E8%BF%9E%E6%8E%A5%E5%99%A8@mysql@mysql-sink)
	* 封装纯钧 [Chunjun](https://dtstack.github.io/chunjun/) 构建 MariaDB实时Sink功能，可以将数据实时写入到指定的MariaDB数据库当中。
	* ChunJun 版本：1.12.5.20240701
* **扩展列表：** 

	* [com.qlangtech.tis.plugin.incr.TISSinkFactory](./plugins#comqlangtechtispluginincrtissinkfactory)

		 * [com.qlangtech.tis.plugins.incr.flink.connector.sink.MySQLSinkFactory](./plugins#comqlangtechtispluginsincrflinkconnectorsinkmysqlsinkfactory)

		 * [com.qlangtech.tis.plugins.incr.flink.maria.sink.MariaDBSinkFactory](./plugins#comqlangtechtispluginsincrflinkmariasinkmariadbsinkfactory)

## tis-flink-chunjun-oracle-plugin.tpi

* **下载地址：** http://mirror.qlangtech.com/4.0.1/tis-plugin/tis-flink-chunjun-oracle-plugin.tpi

* **介绍：** 

	* 封装[Chunjun Oracle Sink](https://dtstack.github.io/chunjun/documents/ChunJun%E8%BF%9E%E6%8E%A5%E5%99%A8@oracle@oracle-sink)组件为TIS用户提供向
	[Oracle](https://www.oracle.com/) 流式写入数据的功能
	
	* 封装[Chunjun Oracle Source](https://dtstack.github.io/chunjun/documents/ChunJun%E8%BF%9E%E6%8E%A5%E5%99%A8@oracle@oracle-source)组件为TIS用户提供从
	  [Oracle](https://www.oracle.com/) 流式读取增量数据的功能
	
* **扩展列表：** 

	* [com.qlangtech.tis.plugin.incr.TISSinkFactory](./plugins#comqlangtechtispluginincrtissinkfactory)

		 * [com.qlangtech.plugins.incr.flink.chunjun.oracle.sink.ChunjunOracleSinkFactory](./plugins#comqlangtechpluginsincrflinkchunjunoraclesinkchunjunoraclesinkfactory)

## tis-flink-chunjun-postgresql-plugin.tpi

* **下载地址：** http://mirror.qlangtech.com/4.0.1/tis-plugin/tis-flink-chunjun-postgresql-plugin.tpi

* **介绍：** 

	* 封装[Chunjun PostgreSQL Sink](https://dtstack.github.io/chunjun/documents/ChunJun%E8%BF%9E%E6%8E%A5%E5%99%A8@postgresql@postgres-sink)组件为TIS用户提供向
	[PostgreSQL](https://www.postgresql.org/) 流式写入数据的功能
	
	* 封装[Chunjun PostgreSQL Source](https://dtstack.github.io/chunjun/documents/ChunJun%E8%BF%9E%E6%8E%A5%E5%99%A8@postgresql@postgres-source)组件为TIS用户提供从
	  [PostgreSQL](https://www.postgresql.org/) 流式读取增量数据的功能
	
* **扩展列表：** 

	* [com.qlangtech.tis.plugin.incr.TISSinkFactory](./plugins#comqlangtechtispluginincrtissinkfactory)

		 * [com.qlangtech.plugins.incr.flink.chunjun.postgresql.sink.ChunjunPostgreSQLSinkFactory](./plugins#comqlangtechpluginsincrflinkchunjunpostgresqlsinkchunjunpostgresqlsinkfactory)

## tis-flink-chunjun-starrocks-plugin.tpi

* **下载地址：** http://mirror.qlangtech.com/4.0.1/tis-plugin/tis-flink-chunjun-starrocks-plugin.tpi

* **介绍：** 

	* 封装[Chunjun StarRocks Sink](https://github.com/DTStack/chunjun/tree/master/chunjun-connectors/chunjun-connector-starrocks)组件为TIS用户提供向
	[StarRocks](https://www.starrocks.com/zh-CN/index) 流式写入数据的功能
	
* **扩展列表：** 

	* [com.qlangtech.tis.plugin.incr.TISSinkFactory](./plugins#comqlangtechtispluginincrtissinkfactory)

		 * [com.qlangtech.tis.plugins.incr.flink.chunjun.starrocks.sink.ChunjunStarRocksSinkFactory](./plugins#comqlangtechtispluginsincrflinkchunjunstarrockssinkchunjunstarrockssinkfactory)

## tis-flink-dependency.tpi

* **下载地址：** http://mirror.qlangtech.com/4.0.1/tis-plugin/tis-flink-dependency.tpi

* **扩展列表：** 

## tis-flink-extends-plugin.tpi

* **下载地址：** http://mirror.qlangtech.com/4.0.1/tis-plugin/tis-flink-extends-plugin.tpi

* **扩展列表：** 

## tis-flink-msg-format-plugin.tpi

* **下载地址：** http://mirror.qlangtech.com/4.0.1/tis-plugin/tis-flink-msg-format-plugin.tpi

* **扩展列表：** 

	* [com.qlangtech.tis.plugins.incr.flink.chunjun.kafka.format.FormatFactory](./plugins#comqlangtechtispluginsincrflinkchunjunkafkaformatformatfactory)

		 * [com.qlangtech.tis.plugins.incr.flink.chunjun.kafka.format.TISCanalJsonFormatFactory](./plugins#comqlangtechtispluginsincrflinkchunjunkafkaformattiscanaljsonformatfactory)

		 * [com.qlangtech.tis.plugins.incr.flink.chunjun.kafka.format.TISDebeziumJsonFormatFactory](./plugins#comqlangtechtispluginsincrflinkchunjunkafkaformattisdebeziumjsonformatfactory)

## tis-hive-flat-table-builder-plugin_hive_2.1.1-cdh6.3.2_hadoop_3.0.0-cdh6.3.2.tpi

* **下载地址：** http://mirror.qlangtech.com/4.0.1/tis-plugin/tis-hive-flat-table-builder-plugin/tis-hive-flat-table-builder-plugin_hive_2.1.1-cdh6.3.2_hadoop_3.0.0-cdh6.3.2.tpi

* **介绍：** 

	* 支持将数据写入到HDFS分布式存储中
* **扩展列表：** 

	* [com.qlangtech.tis.plugin.datax.TabNameDecorator](./plugins#comqlangtechtisplugindataxtabnamedecorator)

		 * [com.qlangtech.tis.plugin.datax.impl.NoneTabNameDecorator](./plugins#comqlangtechtisplugindataximplnonetabnamedecorator)

		 * [com.qlangtech.tis.plugin.datax.impl.TabPrefixDecorator](./plugins#comqlangtechtisplugindataximpltabprefixdecorator)

	* [com.qlangtech.tis.datax.impl.DataxReader](./plugins#comqlangtechtisdataximpldataxreader)

		 * [com.qlangtech.tis.hive.reader.DataXHiveReader](./plugins#comqlangtechtishivereaderdataxhivereader)

	* [com.qlangtech.tis.config.spark.SparkConnStrategy](./plugins#comqlangtechtisconfigsparksparkconnstrategy)

		 * [com.qlangtech.tis.config.spark.impl.StandaloneConnStrategy](./plugins#comqlangtechtisconfigsparkimplstandaloneconnstrategy)

		 * [com.qlangtech.tis.config.spark.impl.YarnConnStrategy](./plugins#comqlangtechtisconfigsparkimplyarnconnstrategy)

	* [com.qlangtech.tis.datax.impl.DataxWriter](./plugins#comqlangtechtisdataximpldataxwriter)

		 * [com.qlangtech.tis.plugin.datax.DataXHiveWriter](./plugins#comqlangtechtisplugindataxdataxhivewriter)

		 * [com.qlangtech.tis.plugin.datax.DataXSparkWriter](./plugins#comqlangtechtisplugindataxdataxsparkwriter)

	* [com.qlangtech.tis.config.ParamsConfig](./plugins#comqlangtechtisconfigparamsconfig)

		 * [com.qlangtech.tis.config.spark.impl.DefaultSparkConnGetter](./plugins#comqlangtechtisconfigsparkimpldefaultsparkconngetter)

		 * [com.qlangtech.tis.config.yarn.YarnConfig](./plugins#comqlangtechtisconfigyarnyarnconfig)

	* [com.qlangtech.tis.plugin.tdfs.TDFSLinker](./plugins#comqlangtechtisplugintdfstdfslinker)

		 * [com.qlangtech.tis.hive.reader.HiveDFSLinker](./plugins#comqlangtechtishivereaderhivedfslinker)

## tis-hive-plugin_hive_2.1.1-cdh6.3.2_hadoop_3.0.0-cdh6.3.2.tpi

* **下载地址：** http://mirror.qlangtech.com/4.0.1/tis-plugin/tis-hive-plugin/tis-hive-plugin_hive_2.1.1-cdh6.3.2_hadoop_3.0.0-cdh6.3.2.tpi

* **扩展列表：** 

	* [com.qlangtech.tis.config.ParamsConfig](./plugins#comqlangtechtisconfigparamsconfig)

		 * [com.qlangtech.tis.hive.DefaultHiveConnGetter](./plugins#comqlangtechtishivedefaulthiveconngetter)

	* [com.qlangtech.tis.hive.Hms](./plugins#comqlangtechtishivehms)

		 * [com.qlangtech.tis.hive.Hms](./plugins#comqlangtechtishivehms)

	* [com.qlangtech.tis.hive.HiveMeta](./plugins#comqlangtechtishivehivemeta)

		 * [com.qlangtech.tis.hive.HiveMeta](./plugins#comqlangtechtishivehivemeta)

	* [com.qlangtech.tis.plugin.ds.DataSourceFactory](./plugins#comqlangtechtisplugindsdatasourcefactory)

		 * [com.qlangtech.tis.hive.Hiveserver2DataSourceFactory](./plugins#comqlangtechtishivehiveserver2datasourcefactory)

## tis-k8s-plugin.tpi

* **下载地址：** http://mirror.qlangtech.com/4.0.1/tis-plugin/tis-k8s-plugin.tpi

* **介绍：** 

	* 支持将将TIS中的部分任务提交到K8S容器中执行
	
	  现支持以下这些任务类型：
	  
	  1. Alibaba DataX任务
	  2. 数据实时增量同步任务
* **扩展列表：** 

	* [com.qlangtech.tis.datax.job.DataXJobWorker](./plugins#comqlangtechtisdataxjobdataxjobworker)

		 * [com.qlangtech.tis.plugin.datax.powerjob.K8SDataXPowerJobServer](./plugins#comqlangtechtisplugindataxpowerjobk8sdataxpowerjobserver)

		 * [com.qlangtech.tis.plugin.datax.powerjob.K8SDataXPowerJobWorker](./plugins#comqlangtechtisplugindataxpowerjobk8sdataxpowerjobworker)

	* [com.qlangtech.tis.plugin.datax.powerjob.PowerJobOMS](./plugins#comqlangtechtisplugindataxpowerjobpowerjoboms)

		 * [com.qlangtech.tis.plugin.datax.powerjob.PowerJobOMS](./plugins#comqlangtechtisplugindataxpowerjobpowerjoboms)

	* [com.qlangtech.tis.plugin.datax.powerjob.PowerJobOMSStorage](./plugins#comqlangtechtisplugindataxpowerjobpowerjobomsstorage)

		 * [com.qlangtech.tis.plugin.datax.powerjob.impl.oms.MySQLPowerJobOMSStorage](./plugins#comqlangtechtisplugindataxpowerjobimplomsmysqlpowerjobomsstorage)

		 * [com.qlangtech.tis.plugin.datax.powerjob.impl.oms.NonePowerJobOMSStorage](./plugins#comqlangtechtisplugindataxpowerjobimplomsnonepowerjobomsstorage)

	* [com.qlangtech.tis.config.ParamsConfig](./plugins#comqlangtechtisconfigparamsconfig)

		 * [com.qlangtech.tis.config.k8s.impl.DefaultK8sContext](./plugins#comqlangtechtisconfigk8simpldefaultk8scontext)

	* [com.qlangtech.tis.plugin.datax.powerjob.ServerPortExport](./plugins#comqlangtechtisplugindataxpowerjobserverportexport)

		 * [com.qlangtech.tis.plugin.datax.powerjob.impl.serverport.Ingress](./plugins#comqlangtechtisplugindataxpowerjobimplserverportingress)

		 * [com.qlangtech.tis.plugin.datax.powerjob.impl.serverport.LoadBalance](./plugins#comqlangtechtisplugindataxpowerjobimplserverportloadbalance)

		 * [com.qlangtech.tis.plugin.datax.powerjob.impl.serverport.NodePort](./plugins#comqlangtechtisplugindataxpowerjobimplserverportnodeport)

	* [com.qlangtech.tis.plugin.k8s.K8sImage](./plugins#comqlangtechtisplugink8sk8simage)

		 * [com.qlangtech.tis.config.k8s.impl.DefaultK8SImage](./plugins#comqlangtechtisconfigk8simpldefaultk8simage)

		 * [com.qlangtech.tis.plugin.datax.powerjob.PowerJobK8SImage](./plugins#comqlangtechtisplugindataxpowerjobpowerjobk8simage)

	* [com.qlangtech.tis.plugin.datax.powerjob.PowerjobCoreDataSource](./plugins#comqlangtechtisplugindataxpowerjobpowerjobcoredatasource)

		 * [com.qlangtech.tis.plugin.datax.powerjob.impl.coresource.DefaultPowerjobCoreDataSource](./plugins#comqlangtechtisplugindataxpowerjobimplcoresourcedefaultpowerjobcoredatasource)

		 * [com.qlangtech.tis.plugin.datax.powerjob.impl.coresource.EmbeddedPowerjobCoreDataSource](./plugins#comqlangtechtisplugindataxpowerjobimplcoresourceembeddedpowerjobcoredatasource)

## tis-kerberos-plugin.tpi

* **下载地址：** http://mirror.qlangtech.com/4.0.1/tis-plugin/tis-kerberos-plugin.tpi

* **介绍：** 

	* 本插件提供基于Kerberos认证支持的功能
	  
	
* **扩展列表：** 

	* [com.qlangtech.tis.config.kerberos.Krb5Res](./plugins#comqlangtechtisconfigkerberoskrb5res)

		 * [com.qlangtech.tis.kerberos.impl.SystemPathKrb5Res](./plugins#comqlangtechtiskerberosimplsystempathkrb5res)

		 * [com.qlangtech.tis.kerberos.impl.UploadKrb5Res](./plugins#comqlangtechtiskerberosimpluploadkrb5res)

	* [com.qlangtech.tis.config.authtoken.UserToken](./plugins#comqlangtechtisconfigauthtokenusertoken)

		 * [com.qlangtech.tis.config.authtoken.impl.KerberosUserToken](./plugins#comqlangtechtisconfigauthtokenimplkerberosusertoken)

	* [com.qlangtech.tis.config.ParamsConfig](./plugins#comqlangtechtisconfigparamsconfig)

		 * [com.qlangtech.tis.kerberos.KerberosCfg](./plugins#comqlangtechtiskerberoskerberoscfg)

## tis-powerjob-common-plugin.tpi

* **下载地址：** http://mirror.qlangtech.com/4.0.1/tis-plugin/tis-powerjob-common-plugin.tpi

* **扩展列表：** 

## tis-realtime-flink.tpi

* **下载地址：** http://mirror.qlangtech.com/4.0.1/tis-plugin/tis-realtime-flink.tpi

* **介绍：** 

	封装了和Flink任务相关的组件，启动Flink任务需要设置的`CheckPoint`、`statbackend`、`RestartStrategy` 相关配置都封装在该组件中
* **扩展列表：** 

	* [com.qlangtech.tis.datax.job.DataXJobWorker](./plugins#comqlangtechtisdataxjobdataxjobworker)

		 * [com.qlangtech.plugins.incr.flink.cluster.FlinkK8SClusterManager](./plugins#comqlangtechpluginsincrflinkclusterflinkk8sclustermanager)

		 * [com.qlangtech.plugins.incr.flink.cluster.KubernetesApplicationClusterConfig](./plugins#comqlangtechpluginsincrflinkclusterkubernetesapplicationclusterconfig)

	* [com.qlangtech.plugins.incr.flink.launch.StateBackendFactory](./plugins#comqlangtechpluginsincrflinklaunchstatebackendfactory)

		 * [com.qlangtech.plugins.incr.flink.launch.statbackend.FileSystemState](./plugins#comqlangtechpluginsincrflinklaunchstatbackendfilesystemstate)

		 * [com.qlangtech.plugins.incr.flink.launch.statbackend.MemoryState](./plugins#comqlangtechpluginsincrflinklaunchstatbackendmemorystate)

		 * [com.qlangtech.plugins.incr.flink.launch.statbackend.OFF](./plugins#comqlangtechpluginsincrflinklaunchstatbackendoff)

	* [com.qlangtech.tis.plugin.incr.IncrStreamFactory](./plugins#comqlangtechtispluginincrincrstreamfactory)

		 * [com.qlangtech.plugins.incr.flink.launch.TISFlinkCDCStreamFactory](./plugins#comqlangtechpluginsincrflinklaunchtisflinkcdcstreamfactory)

	* [com.qlangtech.plugins.incr.flink.launch.clustertype.ClusterType](./plugins#comqlangtechpluginsincrflinklaunchclustertypeclustertype)

		 * [com.qlangtech.plugins.incr.flink.launch.clustertype.KubernetesApplication](./plugins#comqlangtechpluginsincrflinklaunchclustertypekubernetesapplication)

		 * [com.qlangtech.plugins.incr.flink.launch.clustertype.KubernetesSession](./plugins#comqlangtechpluginsincrflinklaunchclustertypekubernetessession)

		 * [com.qlangtech.plugins.incr.flink.launch.clustertype.Standalone](./plugins#comqlangtechpluginsincrflinklaunchclustertypestandalone)

	* [com.qlangtech.plugins.incr.flink.launch.CheckpointFactory](./plugins#comqlangtechpluginsincrflinklaunchcheckpointfactory)

		 * [com.qlangtech.plugins.incr.flink.launch.ckpt.CKOff](./plugins#comqlangtechpluginsincrflinklaunchckptckoff)

		 * [com.qlangtech.plugins.incr.flink.launch.ckpt.CKOn](./plugins#comqlangtechpluginsincrflinklaunchckptckon)

	* [com.qlangtech.tis.config.ParamsConfig](./plugins#comqlangtechtisconfigparamsconfig)

		 * [com.qlangtech.plugins.incr.flink.common.FlinkCluster](./plugins#comqlangtechpluginsincrflinkcommonflinkcluster)

	* [com.qlangtech.tis.plugin.k8s.K8sImage](./plugins#comqlangtechtisplugink8sk8simage)

		 * [com.qlangtech.plugins.incr.flink.common.FlinkK8SImage](./plugins#comqlangtechpluginsincrflinkcommonflinkk8simage)

	* [com.qlangtech.plugins.incr.flink.launch.RestartStrategyFactory](./plugins#comqlangtechpluginsincrflinklaunchrestartstrategyfactory)

		 * [com.qlangtech.plugins.incr.flink.launch.restart.ExponentialDelay](./plugins#comqlangtechpluginsincrflinklaunchrestartexponentialdelay)

		 * [com.qlangtech.plugins.incr.flink.launch.restart.FailureRate](./plugins#comqlangtechpluginsincrflinklaunchrestartfailurerate)

		 * [com.qlangtech.plugins.incr.flink.launch.restart.FixedDelay](./plugins#comqlangtechpluginsincrflinklaunchrestartfixeddelay)

		 * [com.qlangtech.plugins.incr.flink.launch.restart.OFF](./plugins#comqlangtechpluginsincrflinklaunchrestartoff)

## tis-sink-elasticsearch7-plugin.tpi

* **下载地址：** http://mirror.qlangtech.com/4.0.1/tis-plugin/tis-sink-elasticsearch7-plugin.tpi

* **介绍：** 

	* 介绍： 提供实时向[ElasticSearch](https://www.elastic.co/cn/)中写入数据能力
* **扩展列表：** 

	* [com.qlangtech.tis.plugin.incr.TISSinkFactory](./plugins#comqlangtechtispluginincrtissinkfactory)

		 * [com.qlangtech.tis.plugins.incr.flink.connector.elasticsearch7.ElasticSearchSinkFactory](./plugins#comqlangtechtispluginsincrflinkconnectorelasticsearch7elasticsearchsinkfactory)

## tis-sink-hudi-plugin_hudi_0.14.1_spark_2.4.4_hive_2.3.1_hadoop_2.7.3.tpi

* **下载地址：** http://mirror.qlangtech.com/4.0.1/tis-plugin/tis-sink-hudi-plugin/tis-sink-hudi-plugin_hudi_0.14.1_spark_2.4.4_hive_2.3.1_hadoop_2.7.3.tpi

* **介绍：** 

	封装[Apache Hudi](https://hudi.apache.org/)，为用户提供一站式、开箱即用的千表入湖的解决方案
	
	功能：
	
	本组件整合Hudi提供的[Stream API Demo](https://github.com/apache/hudi/blob/master/hudi-flink-datasource/hudi-flink/src/main/java/org/apache/hudi/streamer/HoodieFlinkStreamer.java)功能，
	通过TIS中的元配置信息自动填充[FlinkStreamerConfig](https://github.com/apache/hudi/blob/master/hudi-flink-datasource/hudi-flink/src/main/java/org/apache/hudi/streamer/FlinkStreamerConfig.java)
	实例所需要配置属性，依赖配置信息（Avro schemas，Hudi表分区信息及 [Key Generation](https://hudi.apache.org/docs/key_generation)配置），
	
	配合TIS提供的各种Source Flink CDC 组件，用户可通过TIS控制台，快速实现各种数据源`实时增量`入湖
	
	依赖组件:
	
	 | 组件名称| 版本    |
	 | -------- | -----  |
	 | Apache Hudi     | 0.14.1 |
	 | Apache Spark   |  2.4.4 |
	 | Apache Flink   | tis-1.18.1 |
	 | Apache Hive     | 2.3.1  |
	 | Apache Hadoop  | 2.7.3 | 
	
	
	
	
	
* **扩展列表：** 

	* [com.qlangtech.tis.plugin.incr.TISSinkFactory](./plugins#comqlangtechtispluginincrtissinkfactory)

		 * [com.qlangtech.tis.plugins.incr.flink.connector.hudi.HudiSinkFactory](./plugins#comqlangtechtispluginsincrflinkconnectorhudihudisinkfactory)

	* [com.qlangtech.tis.plugins.incr.flink.connector.hudi.scripttype.HudiStreamScriptType](./plugins#comqlangtechtispluginsincrflinkconnectorhudiscripttypehudistreamscripttype)

		 * [com.qlangtech.tis.plugins.incr.flink.connector.hudi.scripttype.StreamApiType](./plugins#comqlangtechtispluginsincrflinkconnectorhudiscripttypestreamapitype)

	* [com.qlangtech.tis.plugins.incr.flink.connector.hudi.compaction.CompactionConfig](./plugins#comqlangtechtispluginsincrflinkconnectorhudicompactioncompactionconfig)

		 * [com.qlangtech.tis.plugins.incr.flink.connector.hudi.compaction.CompactionConfig](./plugins#comqlangtechtispluginsincrflinkconnectorhudicompactioncompactionconfig)

## tis-split-table-strategy-plugin.tpi

* **下载地址：** http://mirror.qlangtech.com/4.0.1/tis-plugin/tis-split-table-strategy-plugin.tpi

* **介绍：** 

	* 本插件提供数据库分表功能的支持，插件使用文档请查看 [文档](https://tis.pub/docs/guide/datasource/multi-table-rule)
	  
	
* **扩展列表：** 

	* [com.qlangtech.tis.plugin.ds.DataSourceFactoryManipulate](./plugins#comqlangtechtisplugindsdatasourcefactorymanipulate)

		 * [com.qlangtech.tis.plugin.ds.manipulate.CloneDataSourceFactory](./plugins#comqlangtechtisplugindsmanipulateclonedatasourcefactory)

	* [com.qlangtech.tis.datax.DefaultDataXProcessorManipulate](./plugins#comqlangtechtisdataxdefaultdataxprocessormanipulate)

		 * [com.qlangtech.tis.plugin.ds.manipulate.CloneDefaultDataXProcessor](./plugins#comqlangtechtisplugindsmanipulateclonedefaultdataxprocessor)

	* [com.qlangtech.tis.plugin.ds.SplitTableStrategy](./plugins#comqlangtechtisplugindssplittablestrategy)

		 * [com.qlangtech.tis.plugin.ds.split.DefaultSplitTableStrategy](./plugins#comqlangtechtisplugindssplitdefaultsplittablestrategy)

## tis-transformer.tpi

* **下载地址：** http://mirror.qlangtech.com/4.0.1/tis-plugin/tis-transformer.tpi

* **介绍：** 

	
	TIS提供了针对记录级别的值转化工具，目前提供了以下几种值转化算子：
	
	1. `Concat Fields` : 拼接记录中的几个字段的值，作为目标字段值
	2. `JSON Splitter` ：将记录中某列中的值作为JSON数据结构进行拆分，打平拆散生成数个新的目标字段值
	3. `SubStr`：提取记录中的字段值的子字符串内容，作为目标字段值
	4. `Copy Field`：拷贝记录中已有字段的值，作为目标字段值
	5. `Data Masking`：用于用户数据脱敏，例如，业务系统私密数据需要导入到数仓，如，用户名、密码之类数据需要进行脱敏处理。处理方法比较简单，字段内容进行遮照处理，例如：原用户名为‘王五’处理后为‘王*’
* **扩展列表：** 

	* [com.qlangtech.tis.plugin.datax.transformer.UDFDefinition](./plugins#comqlangtechtisplugindataxtransformerudfdefinition)

		 * [com.qlangtech.tis.plugin.datax.transformer.impl.ConcatUDF](./plugins#comqlangtechtisplugindataxtransformerimplconcatudf)

		 * [com.qlangtech.tis.plugin.datax.transformer.impl.CopyValUDF](./plugins#comqlangtechtisplugindataxtransformerimplcopyvaludf)

		 * [com.qlangtech.tis.plugin.datax.transformer.impl.DataMaskingUDF](./plugins#comqlangtechtisplugindataxtransformerimpldatamaskingudf)

		 * [com.qlangtech.tis.plugin.datax.transformer.impl.JSONSplitterUDF](./plugins#comqlangtechtisplugindataxtransformerimpljsonsplitterudf)

		 * [com.qlangtech.tis.plugin.datax.transformer.impl.SubStrUDF](./plugins#comqlangtechtisplugindataxtransformerimplsubstrudf)

